# polykube/server/api/v1/dex/dto.go
@@ -1,7 +1,12 @@
 package dex
 
 type Client struct {
-	ClientID     string   `json:"clientId"`
-	ClientSecret string   `json:"clientSecret"`
+	ID           string   `json:"clientId"`
+	Secret       string   `json:"clientSecret"`
 	RedirectURIs []string `json:"redirectURIs"`
+}
+
+type ClientList struct {
+	Clients []Client `json:"clients"`
+	Total   uint32   `json:"total"`
 }
