# polykube/server/api/v1/dex/routes.go
@@ -2,15 +2,18 @@ package dex
 
 import (
 	"errors"
+	"github.com/ghilbut/polykube/pkg/dex"
 	"net/http"
+
 	// external packages
 	"github.com/gin-gonic/gin"
+
 	// project packages
 	"github.com/ghilbut/polykube/pkg/auth"
 )
 
 func AddRoutes(g *gin.RouterGroup) {
-	g.Use(middleware)
+	g.Use(Middleware())
 	g.GET("/clients", ListClients)
 	g.POST("/clients", CreateClient)
 	g.GET("/clients/:id", GetClient)
@@ -18,18 +21,27 @@ func AddRoutes(g *gin.RouterGroup) {
 	g.DELETE("/clients/:id", DeleteClient)
 }
 
-func middleware(ctx *gin.Context) {
-	if !isSessionAuthenticated(ctx) {
-		return
+func Middleware() gin.HandlerFunc {
+	client, err := dex.NewConn()
+	if err != nil {
+		panic(err)
 	}
 
-	const (
-		k = "WWW-Authenticate"
-		v = `Basic realm="Give username and password", charset="UTF-8"`
-		m = "No basic auth present"
-	)
-	ctx.Writer.Header().Set(k, v)
-	ctx.AbortWithError(http.StatusUnauthorized, errors.New(m))
+	return func(ctx *gin.Context) {
+		ctx.Set("DEX", client)
+
+		if !isSessionAuthenticated(ctx) {
+			return
+		}
+
+		const (
+			k = "WWW-Authenticate"
+			v = `Basic realm="Give username and password", charset="UTF-8"`
+			m = "No basic auth present"
+		)
+		ctx.Writer.Header().Set(k, v)
+		ctx.AbortWithError(http.StatusUnauthorized, errors.New(m))
+	}
 }
 
 func isSessionAuthenticated(ctx *gin.Context) bool {
